internal/queryfile/testdata/invalid/invalid_query_name.cypher
// name: people_over_age :many
MATCH (p:Person) RETURN p
